minigu-cli/tests/snapshots/shell_test__shell_command_cd_no_arg.snap
---
source: minigu-cli/tests/shell_test.rs
assertion_line: 50
info:
  program: minigu
  args:
    - shell
  stdin: "[STDIN REDACTED]"
---
success: true
exit_code: 0
----- stdout -----
Enter ":help" for usage hints.
  × Usage: :cd <PATH>


----- stderr -----
