minigu-cli/tests/snapshots/shell_test__shell_command_cd_non_existent_dir@unix.snap
---
source: minigu-cli/tests/shell_test.rs
assertion_line: 118
info:
  program: minigu
  args:
    - shell
  stdin: "[STDIN REDACTED]"
---
success: true
exit_code: 0
----- stdout -----
Enter ":help" for usage hints.
  × [TEMP_DIR]: No such file or directory (os error 2)


----- stderr -----
