minigu-cli/tests/snapshots/shell_test__shell_command_cd_too_many_arg.snap
---
source: minigu-cli/tests/shell_test.rs
assertion_line: 61
info:
  program: minigu
  args:
    - shell
  stdin: "[STDIN REDACTED]"
---
success: true
exit_code: 0
----- stdout -----
Enter ":help" for usage hints.
  × unknown argument: "bar"
  help: enter ":help" for usage hints


----- stderr -----
