minigu-cli/tests/snapshots/shell_test__shell_command_help_mode.snap
---
source: minigu-cli/tests/shell_test.rs
info:
  program: minigu
  args:
    - shell
  stdin: ":help :mode"
---
success: true
exit_code: 0
----- stdout -----
Enter ":help" for usage hints.
Set output mode

Usage: :mode [MODE_TO_CHANGE]

Arguments:
  [MODE_TO_CHANGE]
          The output mode to change to. If not provided, the current output mode will be printed
          
          [possible values: sharp, modern, psql, markdown, csv, json]


----- stderr -----
